objects/RTS_Request__c.object
<CustomObject>
    <fields>
        <fullName>Sales_Channel__c</fullName>
        <label>Sales Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Direct</fullName>
                    <default>true</default>
                    <label>Direct</label>
                </value>
                <value>
                    <fullName>Distribution</fullName>
                </value>
                <value>
                    <fullName>Contract Manufacturer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sample_Requester__c</fullName>
        <inlineHelpText>Please choose a requester type.</inlineHelpText>
        <label>Sample Requester</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Engineering - FOBU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Send_to_RTS__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Uncheck if you do not wish this request to be immediately created.</inlineHelpText>
        <label>Send to RTS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TE_Account_Number__c</fullName>
        <formula>OpportunityName__r.Account.TE_Account_External_Key__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TE Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TE_Part_Number__c</fullName>
        <description>Formula field that shows the TE Part Number associated with the SF Part Number chosen by the user.</description>
        <formula>Part__r.Part__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TE Part Number</label>
        <type>Text</type>
    </fields>
    <label>RTS Request</label>
    <listViews>
        <fullName>All_RTS_Requests</fullName>
        <columns>OpportunityName__c</columns>
        <columns>NAME</columns>
        <columns>RTS_Display_Id__c</columns>
        <columns>Engineering_Status__c</columns>
        <columns>RTS_Status__c</columns>
        <columns>Latest_RTS_Assignment__c</columns>
        <columns>Due_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>*All RTS Requests</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>RTS Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RTS Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Limit_Customer_End_Product_to_40_Char</fullName>
        <active>true</active>
        <description>RTS will only accept up to 40 characters describing the Customer End Product.</description>
        <errorConditionFormula>AND(LEN(Request_Description__c)  &gt; 40, Send_to_RTS__c, AND(ISBLANK(RTS_Request_Id__c), NOT($Profile.Name=&quot;Service Account&quot;)))</errorConditionFormula>
        <errorMessage>Please modify the request description.  RTS will only accept up to 40 characters describing the Customer End Product.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Limit_Request_Name_to_50_Characters</fullName>
        <active>true</active>
        <description>Limit the length of the value in the RTS request name field to 50 characters or less.  Anything longer causes an error creating the request in RTS.</description>
        <errorConditionFormula>LEN(Name)&gt;50</errorConditionFormula>
        <errorMessage>RTS Request Name must be 50 characters or less.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Other_BU_description_Required</fullName>
        <active>true</active>
        <description>Making Other_BU_Desc conditionally required if the value selected for Product_Owning_GIBU is &quot;Other BU&quot;</description>
        <errorConditionFormula>AND( 
ISPICKVAL( Product_Owning_GIBU__c, &quot;Other BU&quot;)  
, 
ISBLANK( Other_BU_Desc__c) 
,NOT($Profile.Name=&quot;Service Account&quot;)
)</errorConditionFormula>
        <errorDisplayField>Other_BU_Desc__c</errorDisplayField>
        <errorMessage>Other BU Description is required when value selected for Product Owning GIBU is &apos;Other BU&apos;. Please enter value for this field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prod_Owning_GIBU_Medical_for_Med</fullName>
        <active>true</active>
        <description>For those with User.GIBU=Medical, ensure that they pick Product Owning GIBU = Medical.  The rule is NOT fired for system admins and service account profiles.</description>
        <errorConditionFormula>AND(
Send_to_RTS__c,
ISPICKVAL( $User.GIBU__c , &quot;Medical&quot;),
NOT(ISPICKVAL( Product_Owning_GIBU__c, &quot;Medical&quot;)) ,
NOT($Profile.Name=&quot;Service Account&quot;),
NOT($Profile.Name=&quot;Systemadministrator&quot;),
NOT($Profile.Name=&quot;System Administrator&quot;)
)</errorConditionFormula>
        <errorDisplayField>Product_Owning_GIBU__c</errorDisplayField>
        <errorMessage>Select Product Owning GIBU= Medical</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prod_Owning_GIBU_Not_Medical_for_NonMed</fullName>
        <active>true</active>
        <description>For those NOT belonging to GIBU=Medical, ensure that they DO NOT pick Product Owning GIBU = Medical. Otherwise, RTS push will be unsuccessful.
This rule does NOT fire for System Admins and Service Account profiles.</description>
        <errorConditionFormula>AND(
NOT ( ISPICKVAL( $User.GIBU__c , &quot;Medical&quot;) ),
ISPICKVAL( Product_Owning_GIBU__c, &quot;Medical&quot;),
NOT($Profile.Name=&quot;Service Account&quot;),
NOT($Profile.Name=&quot;Systemadministrator&quot;),
NOT($Profile.Name=&quot;System Administrator&quot;)
)</errorConditionFormula>
        <errorDisplayField>Product_Owning_GIBU__c</errorDisplayField>
        <errorMessage>Select Product Owning GIBU not equal to Medical</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prod_Owning_GIBU_for_ADM</fullName>
        <active>true</active>
        <description>For those with User.GIBU=&quot;Aerospace, Defense and Marine&quot;, ensure that they pick Product Owning GIBU = &quot;Aerospace, Defense and Marine&quot;.  The rule is NOT fired for system admins and service account profiles.</description>
        <errorConditionFormula>AND(

ISPICKVAL( $User.GIBU__c , &quot;Aerospace, Defense and Marine&quot;),
NOT(ISPICKVAL( Product_Owning_GIBU__c, &quot;Aerospace, Defense and Marine&quot;)) ,
NOT($Profile.Name=&quot;Service Account&quot;),
NOT($Profile.Name=&quot;Systemadministrator&quot;),
NOT($Profile.Name=&quot;System Administrator&quot;)
)</errorConditionFormula>
        <errorDisplayField>Product_Owning_GIBU__c</errorDisplayField>
        <errorMessage>Select Product Owning GIBU= &quot;Aerospace, Defense and Marine&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RTS_Required_Field_Due_Date</fullName>
        <active>true</active>
        <description>Making due_date conditionally required if Send to RTS is checked.</description>
        <errorConditionFormula>AND( 
Send_to_RTS__c  
, 
ISBLANK( Due_Date__c) ,
NOT($Profile.Name=&quot;Service Account&quot;)
)</errorConditionFormula>
        <errorDisplayField>Due_Date__c</errorDisplayField>
        <errorMessage>Due Date is required when Send to RTS is checked. Please select value for this field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RTS_Required_Field_Opportunity</fullName>
        <active>true</active>
        <description>Making Opportunity conditionally required if Send to RTS is checked.</description>
        <errorConditionFormula>AND( 
Send_to_RTS__c  
,  ISBLANK( OpportunityName__c ) 
,NOT($Profile.Name=&quot;Service Account&quot;)
)</errorConditionFormula>
        <errorDisplayField>OpportunityName__c</errorDisplayField>
        <errorMessage>Opportunity is required when Send to RTS is checked. Please select value for this field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RTS_Required_Field_Pricing_Requirement</fullName>
        <active>true</active>
        <description>Making Pricing_Requirement conditionally required if Send to RTS is checked.</description>
        <errorConditionFormula>AND( NOT($Setup.Datacomm_Profile_for_RTS__c.Is_Active__c),
Send_to_RTS__c  
, 
ISPICKVAL( Pricing_Requirement__c, &quot;&quot;) 
,NOT($Profile.Name=&quot;Service Account&quot;)
)</errorConditionFormula>
        <errorDisplayField>Pricing_Requirement__c</errorDisplayField>
        <errorMessage>Pricing Requirement is required when Send to RTS is checked. Please select value for this field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RTS_Required_Field_Product_Owning_GIBU</fullName>
        <active>true</active>
        <description>Making Product_Owning_GIBU conditionally required if Send to RTS is checked.</description>
        <errorConditionFormula>AND(NOT($Setup.Datacomm_Profile_for_RTS__c.Is_Active__c) , 
Send_to_RTS__c  
, 
ISPICKVAL( Product_Owning_GIBU__c, &quot;&quot;) 
,NOT($Profile.Name=&quot;Service Account&quot;)
)</errorConditionFormula>
        <errorDisplayField>Product_Owning_GIBU__c</errorDisplayField>
        <errorMessage>Product Owning GIBU is required when Send to RTS is checked. Please select value for this field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RTS_Required_Field_Request_Description</fullName>
        <active>true</active>
        <description>Making Request_Description__c conditionally required if Send to RTS is checked.</description>
        <errorConditionFormula>AND(NOT($Setup.Datacomm_Profile_for_RTS__c.Is_Active__c), 
Send_to_RTS__c  
, 
ISBLANK( Request_Description__c) 
,NOT($Profile.Name=&quot;Service Account&quot;)
)</errorConditionFormula>
        <errorDisplayField>Request_Description__c</errorDisplayField>
        <errorMessage>Request Description is required when Send to RTS is checked. Please enter value for this field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RTS_Required_Field_request_type</fullName>
        <active>true</active>
        <description>Making request_type conditionally required if Send to RTS is checked.</description>
        <errorConditionFormula>AND( 
Send_to_RTS__c  
, 
ISPICKVAL( Request_Type__c, &quot;&quot;) 
,NOT($Profile.Name=&quot;Service Account&quot;)
)</errorConditionFormula>
        <errorDisplayField>Request_Type__c</errorDisplayField>
        <errorMessage>Request Type is required when Send to RTS is checked. Please select value for this field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RTS_Required_Field_sales_channel</fullName>
        <active>true</active>
        <description>Making sales_channel conditionally required if Send to RTS is checked.</description>
        <errorConditionFormula>AND( NOT($Setup.Datacomm_Profile_for_RTS__c.Is_Active__c), 
Send_to_RTS__c  
, 
ISPICKVAL( Sales_Channel__c, &quot;&quot;) 
,NOT($Profile.Name=&quot;Service Account&quot;)
)</errorConditionFormula>
        <errorDisplayField>Sales_Channel__c</errorDisplayField>
        <errorMessage>Sales Channel is required when Send to RTS is checked. Please select value for this field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RTS_Required_Fields_For_New_Customer</fullName>
        <active>true</active>
        <description>Please fill value for Industry Code, Country Code, Customer Ship to Name and Customer Location if the opportunity is coming from &apos;Prospect&apos; Account</description>
        <errorConditionFormula>AND($Setup.Datacomm_Profile_for_RTS__c.Is_Active__c ,  
IF(TEXT(New_Customer__c)=&quot;1&quot;,
OR( 
ISBLANK(Country_Code__c), 
ISBLANK(Industry_Code__c), 
ISBLANK(DTC_Customer_Location__c), ISBLANK(DTC_Customer_Ship_to_Name__c) ),false
)
)</errorConditionFormula>
        <errorMessage>Please fill value for Industry Code, Country Code, Customer Ship to Name and Customer Location if the opportunity is coming from &apos;Prospect&apos; Account</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RTS_required_Fields_For_Quote_Request</fullName>
        <active>false</active>
        <description>Quote Request Fields manadatory for DataComm Users</description>
        <errorConditionFormula>AND($Setup.Datacomm_Profile_for_RTS__c.Is_Active__c , ISPICKVAL(Request_Type__c,&quot;Engineering Quote Request&quot;), 
OR(ISPICKVAL(Product_Owning_GIBU__c,&quot;&quot;), ISPICKVAL(Request_Priority__c,&quot;&quot;), 
ISPICKVAL(Sales_Channel__c,&quot;&quot;),
ISPICKVAL(Pricing_Requirement__c,&quot;&quot;), ISBLANK(Request_Description__c)     
)
)</errorConditionFormula>
        <errorMessage>If this is a sample request, please change Request Type to &quot;Engineering Sample Request&quot;. If this is a quote request, please fill in all fields in the QUOTE REQUEST section of this form.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RTS_required_Fields_For_Sample_Request</fullName>
        <active>true</active>
        <description>Sample Request Fields manadatory for DataComm Users</description>
        <errorConditionFormula>AND($Setup.DND_Profile_for_RTS__c.Is_Active__c , ISPICKVAL(Request_Type__c,&quot;Engineering Sample Request&quot;), 
OR( 
ISPICKVAL(Sample_Requester__c,&quot;&quot;),ISPICKVAL(ESR_Scope__c, &quot;&quot;), 
ISBLANK(Customer_PO_Number__c),ISBLANK(Comments_Ship_Instr_Reg_of_Consumpt__c) , 
ISPICKVAL(Manufacturing_Location_Plant__c,&quot;&quot;), 
ISPICKVAL(Department_Charge__c,&quot;&quot;) 
) 
)</errorConditionFormula>
        <errorMessage>Please fill in all fields in SAMPLE REQUEST section of this form.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Reason_For_Urgent_Validation</fullName>
        <active>true</active>
        <description>If the Request Priority is Urgent this field is required.</description>
        <errorConditionFormula>AND(
 ISPICKVAL(Request_Priority__c , &quot;Urgent&quot;) ,
 ISBLANK(Reason_for_Marking_as_Urgent__c ) ,
NOT($Profile.Name=&quot;Service Account&quot;)
 )</errorConditionFormula>
        <errorDisplayField>Reason_for_Marking_as_Urgent__c</errorDisplayField>
        <errorMessage>In case the request priority is urgent, Please specify Reason for Marking as Urgent.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Required_SF_Part_Number</fullName>
        <active>false</active>
        <description>Rule that requires a sample request type to have a SF Part Number.</description>
        <errorConditionFormula>AND( 

OR( 
$Profile.Name = &quot;DND Standard User&quot;, 
$Profile.Name = &quot;DND Engineering User w/Cost&quot;, 
$Profile.Name = &quot;DND FAE User&quot;), 

ISPICKVAL(Request_Type__c ,&quot;Engineering Sample Request&quot;), 
ISBLANK( Part__c ))</errorConditionFormula>
        <errorDisplayField>Part__c</errorDisplayField>
        <errorMessage>Please choose a Part Number from Lookup.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Select_if_ADM</fullName>
        <active>true</active>
        <description>If Product Owning GIBU is ADM, then a selection must be made</description>
        <errorConditionFormula>AND(
ISPICKVAL(Product_Owning_GIBU__c, &quot;Aerospace, Defense and Marine&quot;),
ISBLANK(TEXT(QR_Form_Type_Select__c)) 
)</errorConditionFormula>
        <errorDisplayField>QR_Form_Type_Select__c</errorDisplayField>
        <errorMessage>ADM users must select a QR form type. Please make a selection.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Send_to_RTS_Required</fullName>
        <active>true</active>
        <errorConditionFormula>( ISPICKVAL($User.GIBU__c, &quot;Data &amp; Devices&quot;) &amp;&amp; 
( Send_to_RTS__c=false) &amp;&amp; 
NOT($Profile.Name=&quot;Service Account&quot;) &amp;&amp; 
NOT($Profile.Name=&quot;Systemadministrator&quot;) &amp;&amp; 
NOT($Profile.Name=&quot;System Administrator&quot;) 
)</errorConditionFormula>
        <errorDisplayField>Send_to_RTS__c</errorDisplayField>
        <errorMessage>You must select Send to RTS to save this request.</errorMessage>
    </validationRules>
</CustomObject>